--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "reselect": "^4.1.6",
+    "sass": "^1.81.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,8 +39,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "node-sass": "^7.0.1"
   }
 }
